<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/arch_username_layout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_larger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/arch_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:maxLength="8"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/arch_password_layout"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arch_username_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/arch_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textWebPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arch_login_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arch_password_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arch_fill_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/fill"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arch_login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arch_clear_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:text="@string/clear"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arch_fill_button" />
</androidx.constraintlayout.widget.ConstraintLayout>